Mon 25 Feb 2019 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Make eloquentlog-data as global
	* Add postgresql service using a data volume container

Sat 23 Feb 2019 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Add make {join|leave} for nodes on docker swarm

Sun 17 Feb 2019 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Initial commit ;)