@@ -1,7 +1,9 @@
-version: '3.5'
+version: '3.7'
 services:
   registry:
     container_name: eloquentlog-registry
+    labels:
+      - "com.eloquentlog.container-name=registry"
     image: registry:2.7.1
     ports:
       - 5000:5000
@@ -12,6 +14,8 @@ services:
 
   manager:
     container_name: eloquentlog-manager
+    labels:
+      - "com.eloquentlog.container-name=manager"
     image: docker:18.09-dind
     privileged: true
     tty: true
@@ -30,6 +34,8 @@ services:
 
   worker-01:
     container_name: eloquentlog-worker-01
+    labels:
+      - "com.eloquentlog.container-name=worker-01"
     image: docker:18.09-dind
     privileged: true
     tty: true
@@ -46,6 +52,8 @@ services:
 
   worker-02:
     container_name: eloquentlog-worker-02
+    labels:
+      - "com.eloquentlog.container-name=worker-02"
     image: docker:18.09-dind
     privileged: true
     tty: true
@@ -62,6 +70,8 @@ services:
 
   worker-03:
     container_name: eloquentlog-worker-03
+    labels:
+      - "com.eloquentlog.container-name=worker-03"
     image: docker:18.09-dind
     privileged: true
     tty: true
